# sentence-transformers

./: bert.txt  cache.py  main.py  model.py  openai.txt  pyproject.toml
