[tool.poetry]
name = "alix"
version = "0.1.0"
description = ""
authors = ["Iurii Alekseev <iurii.alekseev.inbox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^2.2.2"
redis = "^4.5.4"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.263"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "off"
venvPath = "/Users/yuriyalekseyev/Library/Caches/pypoetry/virtualenvs"
venv = "alix-1dor1VEk-py3.11"
